tests/errors/flow/if-condition-not-bool.fn
---
Description: If condition is an integer not a bool
Expected: FN3405
---

type Program
{
    static fn Main -> i32
    {
        if (1)
        {
            var y = 1
        }
        return 0
    }
}
